--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="nav">
 			<nav>
 				<div class="container">
-					<a href="" class="logo"
+					<a href="index.html" class="logo"
 						><img src="img/logo/main_logo.svg" alt=""
 					/></a>
 					<div class="drop-down">
