--- a/tutor_profile.html
+++ b/tutor_profile.html
@@ -11,11 +11,11 @@
 	</head>
 	<body>
 		<!-- NAV -->
-		<!-- NAV -->
+	
 		<div class="nav">
 			<nav>
 				<div class="container">
-					<a href="" class="logo"
+					<a href="index.html" class="logo"
 						><img src="img/logo/main_logo.svg" alt=""
 					/></a>
 					<div class="drop-down">
@@ -208,17 +208,17 @@
                 <div class="wrapper">
                     <div class="diploma">
                         <label for="diploma">Diploma</label> 
-                        <input type="text" name="diploma">
+                        <input type="text" name="diploma" placeholder="Add diploma">
                     </div>
                    
 
                    <div class="certificate">
                     <label for="certificate">Certificate </label> 
-                    <input type="text" name="certificate">
+                    <input type="text" name="certificate" placeholder="Add certificate">
                    </div>
                    <div class="add_more">
                     <label for="Add_more">Add more </label> 
-                    <input type="text" name="Add_more">
+                    <input type="text" name="Add_more" placeholder="Add more">
                    </div>
                    
                 </div>
