--- a/tutor_profile.html
+++ b/tutor_profile.html
@@ -162,6 +162,60 @@
 				</div>
 			</div>
 		</section>
+		<!-- MY CLASSES -->
+		<section class="my_classes tutor_section">
+			<div class="container">
+				<h3>My classes</h3>
+				<div class="wrapper">
+					<div class="year_mounth">
+						<p><span id="prev" class="calendar_nav"><</span><span class="year">2021</span>/<span class="mounth">February</span><span id="next" class="calendar_nav">></span></p>
+					</div>
+						<div class="calendar_table">
+							<table>
+								<tr>
+									<td class="student">Mike Milders</td>
+									<td class="day">Wednesday</td>
+									<td class="date">03/02/2021</td>
+									<td class="time">20:00 - 21:00</td>
+								</tr>
+								<tr>
+									<td class="student">David Johnes</td>
+									<td class="day">Thursday</td>
+									<td class="date">11/02/2021</td>
+									<td class="time">16:00 - 17:00</td>
+								</tr>
+								<tr>
+									<td class="student">Carlos Baker</td>
+									<td class="day">Thursday</td>
+									<td class="date">11/02/2021</td>
+									<td class="time">17:00 - 18:00</td>
+								</tr>
+								<tr>
+									<td class="student">Carlos Baker</td>
+									<td class="day">Thursday</td>
+									<td class="date">11/02/2021</td>
+									<td class="time">17:00 - 18:00</td>
+								</tr>
+								<tr>
+									<td class="student">Carlos Baker</td>
+									<td class="day">Thursday</td>
+									<td class="date">11/02/2021</td>
+									<td class="time">17:00 - 18:00</td>
+								</tr>
+								<tr>
+									<td class="student">Carlos Baker</td>
+									<td class="day">Thursday</td>
+									<td class="date">11/02/2021</td>
+									<td class="time">17:00 - 18:00</td>
+								</tr>
+							</table>
+						</div>
+						<p>You can edit your schedule in your calendar</p>
+						<button>Go to my my calendar</button>
+					
+				</div>
+			</div>
+		</section>
 
 		<!-- FEATURING -->
 
@@ -192,6 +246,46 @@
               </div>
             </div>
         </section>
+
+		<!-- PRICING -->
+
+		<section class="tutor_section pricing">
+			<div class="container">
+				<h3>Pricing</h3>
+				<div class="wrapper">
+					<div class="row">
+						<p>1 hour</p> <input type="text" placeholder="$50">
+					</div>
+					<div class="row">
+						<p>Pack 5 classes</p> <input type="text" placeholder="$225">
+					</div>
+					<div class="row">
+						<p>Pack 10 classes</p> <input type="text" placeholder="$400">
+					</div>
+					<div class="row">
+						<p>Promo</p> <input type="text" placeholder="30 classes / $9 ea">
+					</div>
+					<div class="recommendation">
+						<input type="checkbox" name="checkbox"> <label for="checkbox"><span>Recommended: </span> I’d like to offer free 15 min trial-lesson to my new students</label>
+						<p>(If you chose this option, it will appear on your profile)</p>
+					</div>
+					
+				</div>
+				<h3>Video presentation</h3>
+				<div class="wrapper video_wrapper">
+					<div class="video_link">
+						<p>Shoot a video or <br> copy URL</p>
+					</div>
+					<div class="tutor_video">
+						<div class="video_box">
+							<video src="img/video/pexels-artem-podrez-6274525.mp4"  ></video>
+						</div>
+						<img src="img/video/play_btn.svg" alt="" class="play_btn">
+					</div>
+				</div>
+			</div>
+		</section>
+
         <!-- APPS -->
         <section class="tutor_section apps">
             <div class="container">
@@ -202,7 +296,28 @@
                 </div>
             </div>
         </section>
-<!-- EXPERIANCE -->
+		<!-- PAYMAENT METHOD -->
+		<section class="tutor_section payment_method">
+			<div class="container">
+				<h3>
+					Payment methods
+				</h3>
+				<div class="wrapper">
+					<p>I accept the following payment methods</p>
+					<div class="paymant-inputs">
+						<input type="text" placeholder="PayPal, TranswerWise">
+						<input type="text" placeholder="PayPal, TranswerWise">
+						<input type="text" placeholder="PayPal, TranswerWise">
+						<input type="text" placeholder="email or phone number">
+						<input type="text" placeholder="email or phone number">
+						<input type="text" placeholder="email or phone number">
+						<button>Add</button>
+					</div>
+					<p class="preffered_paymet">I Prefer my students to pay me<span class="prior">prior to the class</span>/<span class="during">during</span>/<span class="after ">after the class</span></p>
+				</div>
+			</div>
+		</section>
+		<!-- EXPERIANCE -->
         <section class="tutor_section expert">
             <div class="container">
                 <h3>I’m expert in</h3>
