--- a/tutor_profile.html
+++ b/tutor_profile.html
@@ -303,8 +303,8 @@
 					Payment methods
 				</h3>
 				<div class="wrapper">
-					<p>I accept the following payment methods</p>
-					<div class="paymant-inputs">
+					<p class="label">I accept the following <br> payment methods</p>
+					<div class="inputs payment">
 						<input type="text" placeholder="PayPal, TranswerWise">
 						<input type="text" placeholder="PayPal, TranswerWise">
 						<input type="text" placeholder="PayPal, TranswerWise">
@@ -315,6 +315,48 @@
 					</div>
 					<p class="preffered_paymet">I Prefer my students to pay me<span class="prior">prior to the class</span>/<span class="during">during</span>/<span class="after ">after the class</span></p>
 				</div>
+
+				<h3>Contact</h3>
+				<div class="wrapper wrapper_contact">
+					<p class="label">Contact me via</p>
+					<div class="inputs contact">
+						<input type="text" placeholder="PayPal, TranswerWise">
+						<input type="text" placeholder="PayPal, TranswerWise">
+						<input type="text" placeholder="PayPal, TranswerWise">
+						<input type="text" placeholder="email or phone number">					
+					</div>
+					<div class="spacer"></div>
+					<p class="request_review">Request revision from <br> former student</p>
+					
+					<div class="share_infos">
+						<div class="review_link">
+							<img src="img/social_media_icons/share_icon.svg" alt="">
+						   </div>
+						<p>Share this link to request recommendations from your contacts</p>
+						<img src="img/social_media_icons/facebook_full.svg" alt="">
+						<img src="img/social_media_icons/instagram_full.svg" alt="">
+						<div class="spacer"></div>
+						<input class="mail-link" type="text" value="https: www.kewoo.com/opinion/Jill - 174927">
+
+						<div class="review_link"><img  src="img/social_media_icons/send_email.svg" alt=""></div>
+						<p>Send a request by e-mail to whoever you would like to be recommended</p>
+						<input class="email-inputs" type="text" placeholder="Write e-mails here. you can separate them with commas">
+						<div class="spacer"></div>
+						<button>Send requests by e-mail</button>
+					</div>
+					<div class="spacer"></div>
+					<div class="request_review socials">
+						<p>Connect your social media <br>
+						    account to Kewoo</p>
+					</div>
+					
+					<div class="share_infos">
+						<img src="img/social_media_icons/facebook_full.svg" alt="">
+						<img src="img/social_media_icons/instagram_full.svg" alt="">
+						<img src="img/social_media_icons/twitter_full.svg" alt="">
+						<img src="img/social_media_icons/pinterest_fuul.svg" alt="">
+						<img src="img/social_media_icons/music_full.svg" alt="">
+					</div>
 			</div>
 		</section>
 		<!-- EXPERIANCE -->
