--- a/become_a_tutor.html
+++ b/become_a_tutor.html
@@ -23,7 +23,7 @@
 							<li><a href="">How it works</a></li>
 							<li><a href="tutors.html">Tutors</a></li>
 							<li><a href="become_a_tutor.html">Become a tutor</a></li>
-							<li><a href="">Area tutors</a></li>
+							<li><a href="tutor_profile.html">Area tutors</a></li>
 						</ul>
 						<hr />
 						<ul class="langs">
