--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<li><a href="">How it works</a></li>
 							<li><a href="tutors.html">Tutors</a></li>
 							<li><a href="become_a_tutor.html">Become a tutor</a></li>
-							<li><a href="">Area tutors</a></li>
+							<li><a href="tutor_profile.html">Area tutors</a></li>
 						</ul>
 						<hr />
 						<ul class="langs">
@@ -288,9 +288,9 @@
 				</hgroup>
 				<!-- map -->
 				<div class="map-wrapper">
-					<div class="map-box">
+					<div class="map-box" id="moja_mapa">
 						<!-- MARKERI -->
-						<div class="map-marker" data-top="35" data-left="42">
+						<div class="map-marker" data-top="43" data-left="53" style="--i: 1">
 							<div class="marker-inner">
 								<div class="marker-profile bg-green">
 									<img src="img/map/map_person_1.png" alt="" />
@@ -305,10 +305,10 @@
 							</div>
 						</div>
 
-						<div class="map-marker" data-top="30" data-left="73">
+						<div class="map-marker" data-top="33" data-left="9" style="--i: 10">
 							<div class="marker-inner">
 								<div class="marker-profile bg-green">
-									<img src="img/map/map_person_3.png" alt="" />
+									<img src="img/map/map_person_11.png" alt="" />
 								</div>
 
 								<div class="dashes">
@@ -320,39 +320,17 @@
 							</div>
 						</div>
 
-						<div class="map-marker" data-top="30" data-left="8">
-							<div class="marker-inner">
-								<div class="marker-profile bg-blue">
-									<img src="img/map/map_person_2.png" alt="" />
-								</div>
-								<div class="dashes">
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="map-marker" data-top="10" data-left="80">
-							<div class="marker-inner">
-								<div class="marker-profile bg-blue">
-									<img src="img/map/map-person-2.png" alt="" />
-								</div>
-								<div class="dashes">
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="map-marker" data-top="70" data-left="90">
+						<div
+							class="map-marker"
+							data-top="22"
+							data-left="19"
+							style="--i: 3.5"
+						>
 							<div class="marker-inner">
 								<div class="marker-profile bg-yellow">
-									<img src="img/map/map_person_1.png" alt="" />
+									<img src="img/map/map_person_12.png" alt="" />
 								</div>
+
 								<div class="dashes">
 									<span class="bg-yellow"></span>
 									<span class="bg-yellow"></span>
@@ -362,25 +340,12 @@
 							</div>
 						</div>
 
-						<div class="map-marker" data-top="10" data-left="15">
-							<div class="marker-inner">
-								<div class="marker-profile bg-yellow">
-									<img src="img/map/map_person_3.png" alt="" />
-								</div>
-								<div class="dashes">
-									<span class="bg-yellow"></span>
-									<span class="bg-yellow"></span>
-									<span class="bg-yellow"></span>
-									<span class="bg-yellow"></span>
-								</div>
-							</div>
-						</div>
-
-						<div class="map-marker" data-top="25" data-left="65">
+						<div class="map-marker" data-top="45" data-left="15" style="--i: 4">
 							<div class="marker-inner">
 								<div class="marker-profile bg-purple">
-									<img src="img/map/map_person_6.png" alt="" />
+									<img src="img/map/map_person_2.png" alt="" />
 								</div>
+
 								<div class="dashes">
 									<span class="bg-purple"></span>
 									<span class="bg-purple"></span>
@@ -390,11 +355,17 @@
 							</div>
 						</div>
 
-						<div class="map-marker" data-top="45" data-left="50">
+						<div
+							class="map-marker"
+							data-top="52"
+							data-left="24"
+							style="--i: 5.5"
+						>
 							<div class="marker-inner">
 								<div class="marker-profile bg-yellow">
 									<img src="img/map/map_person_6.png" alt="" />
 								</div>
+
 								<div class="dashes">
 									<span class="bg-yellow"></span>
 									<span class="bg-yellow"></span>
@@ -404,44 +375,191 @@
 							</div>
 						</div>
 
-						<div class="map-marker" data-top="95" data-left="27">
+						<div class="map-marker" data-top="88" data-left="26" style="--i: 6">
+							<div class="marker-inner">
+								<div class="marker-profile bg-purple">
+									<img src="img/map/map_person_3.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="map-marker" data-top="40" data-left="42" style="--i: 7">
+							<div class="marker-inner">
+								<div class="marker-profile bg-purple">
+									<img src="img/map/map_person_4.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="map-marker" data-top="75" data-left="52" style="--i: 1">
+							<div class="marker-inner">
+								<div class="marker-profile bg-yellow">
+									<img src="img/map/map-person-2.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="map-marker" data-top="24" data-left="48" style="--i: 2">
+							<div class="marker-inner">
+								<div class="marker-profile bg-yellow">
+									<img src="img/map/map_person_13.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+								</div>
+							</div>
+						</div>
+
+						<div
+							class="map-marker"
+							data-top="22"
+							data-left="56"
+							style="--i: 10"
+						>
 							<div class="marker-inner">
 								<div class="marker-profile bg-blue">
+									<img src="img/map/map_person_5.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-blue"></span>
+									<span class="bg-blue"></span>
+									<span class="bg-blue"></span>
+									<span class="bg-blue"></span>
+								</div>
+							</div>
+						</div>
+						<div class="map-marker" data-top="42" data-left="63" style="--i: 4">
+							<div class="marker-inner">
+								<div class="marker-profile bg-purple">
+									<img src="img/map/map_person_9.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="map-marker" data-top="19" data-left="68" style="--i: 8">
+							<div class="marker-inner">
+								<div class="marker-profile bg-green">
 									<img src="img/map/map_person_7.png" alt="" />
 								</div>
+
 								<div class="dashes">
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
+									<span class="bg-green"></span>
+									<span class="bg-green"></span>
+									<span class="bg-green"></span>
+									<span class="bg-green"></span>
 								</div>
 							</div>
 						</div>
 
-						<div class="map-marker" data-top="44" data-left="63">
+						<div
+							class="map-marker"
+							data-top="48"
+							data-left="71.5"
+							style="--i: 6"
+						>
 							<div class="marker-inner">
-								<div class="marker-profile bg-blue">
+								<div class="marker-profile bg-yellow">
 									<img src="img/map/map_person_8.png" alt="" />
 								</div>
+
 								<div class="dashes">
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
 								</div>
 							</div>
 						</div>
 
-						<div class="map-marker" data-top="35" data-left="84">
+						<div class="map-marker" data-top="56" data-left="84" style="--i: 7">
 							<div class="marker-inner">
-								<div class="marker-profile bg-blue">
-									<img src="img/map/map_person_7.png" alt="" />
+								<div class="marker-profile bg-purple">
+									<img src="img/map/map_person_16.png" alt="" />
 								</div>
+
 								<div class="dashes">
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
-									<span class="bg-blue"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="map-marker" data-top="10" data-left="82" style="--i: 8">
+							<div class="marker-inner">
+								<div class="marker-profile bg-purple">
+									<img src="img/map/map_person_14.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+									<span class="bg-purple"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="map-marker" data-top="30" data-left="89" style="--i: 4">
+							<div class="marker-inner">
+								<div class="marker-profile bg-yellow">
+									<img src="img/map/map_person_15.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+									<span class="bg-yellow"></span>
+								</div>
+							</div>
+						</div>
+
+						<div class="map-marker" data-top="83" data-left="93">
+							<div class="marker-inner">
+								<div class="marker-profile bg-green">
+									<img src="img/map/map_person_17.png" alt="" />
+								</div>
+
+								<div class="dashes">
+									<span class="bg-green"></span>
+									<span class="bg-green"></span>
+									<span class="bg-green"></span>
+									<span class="bg-green"></span>
 								</div>
 							</div>
 						</div>
