--- a/tutors.html
+++ b/tutors.html
@@ -11,7 +11,6 @@
 	</head>
 	<body>
 		<!-- NAV -->
-		<!-- NAV -->
 		<div class="nav">
 			<nav>
 				<div class="container">
@@ -23,7 +22,7 @@
 							<li><a href="">How it works</a></li>
 							<li><a href="tutors.html">Tutors</a></li>
 							<li><a href="become_a_tutor.html">Become a tutor</a></li>
-							<li><a href="">Area tutors</a></li>
+							<li><a href="tutor_profile.html">Area tutors</a></li>
 						</ul>
 						<hr />
 						<ul class="langs">
@@ -41,6 +40,8 @@
 				</div>
 			</nav>
 		</div>
+
+		<!-- FIND YOUR TUTOR  custom selectors-->
 
 		<section class="find_your_tutor">
 			<div class="container">
@@ -273,9 +274,10 @@
 			</div>
 		</section>
 
-		<!-- Tutor View -->
+		<!-- Tutor profiles View -->
 		<section class="tutor_profile_view">
 			<div class="container">
+				<!-- just add data-featured to feature specific tutor-->
 				<div class="tutor-card" data-featured="featured">
 					<div class="tutor-card-img">
 						<img src="img/tutors/tutor1.png" alt="" />
