--- a/tutors.html
+++ b/tutors.html
@@ -314,7 +314,9 @@
 								concentrating on Grammar, and Vocabulary. If you are struggling
 								with Speaking, Reading, Writing, or Listening I can help
 							</p>
-							<a href="" class="read_more_tutor">Read more...</a>
+							<a href="tutors_details.html" class="read_more_tutor"
+								>Read more...</a
+							>
 						</div>
 					</div>
 					<div class="tutor-card-ctr">
@@ -361,7 +363,9 @@
 								concentrating on Grammar, and Vocabulary. If you are struggling
 								with Speaking, Reading, Writing, or Listening I can help
 							</p>
-							<a href="" class="read_more_tutor">Read more...</a>
+							<a href="tutors_details.html" class="read_more_tutor"
+								>Read more...</a
+							>
 						</div>
 					</div>
 					<div class="tutor-card-ctr">
@@ -408,7 +412,9 @@
 								concentrating on Grammar, and Vocabulary. If you are struggling
 								with Speaking, Reading, Writing, or Listening I can help
 							</p>
-							<a href="" class="read_more_tutor">Read more...</a>
+							<a href="tutors_details.html" class="read_more_tutor"
+								>Read more...</a
+							>
 						</div>
 					</div>
 					<div class="tutor-card-ctr">
@@ -455,7 +461,9 @@
 								concentrating on Grammar, and Vocabulary. If you are struggling
 								with Speaking, Reading, Writing, or Listening I can help
 							</p>
-							<a href="" class="read_more_tutor">Read more...</a>
+							<a href="tutors_details.html" class="read_more_tutor"
+								>Read more...</a
+							>
 						</div>
 					</div>
 					<div class="tutor-card-ctr">
