--- a/become_a_tutor.html
+++ b/become_a_tutor.html
@@ -274,7 +274,7 @@
              FAQ 
             ----------->
 
-		<section class="faq">
+		<section class="faq" id="faq">
 			<div class="container">
 				<h2>FAQ</h2>
 				<hr />
