--- a/tutor_profile.html
+++ b/tutor_profile.html
@@ -731,7 +731,7 @@
 							</table>
 						</div>
 						<p>You can edit your schedule in your calendar</p>
-						<button>Go to my my calendar</button>
+						<a href="#my_calendar">Go to my my calendar</a>
 					
 				</div>
 			</div>
@@ -945,11 +945,26 @@
 								<div class="date unavailable ">      <!--Class unavailable-->
 									<p class="current_date">3</p>  
 								</div>
-								<div class="date booked">        	 <!--Class booked -->
+								<div class="date booked ">        	 <!--Class booked -->
 									<p class="current_date">4</p>
 									<div class="date_agenda">      	 <!--add div>ul>li class data_agenda -->
 										<ul>
 											<li>16:00 - 17:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
+											<li>17:00 - 18:00</li>
 											<li>17:00 - 18:00</li>
 											<li>17:00 - 18:00</li>
 											<li>17:00 - 18:00</li>
