--- a/tutors_details.html
+++ b/tutors_details.html
@@ -56,15 +56,106 @@
 							</div>
 							<div class="tutor-content">
 								<div class="my_profile">
-									<button>Book a <span>15 min free trial</span> lesson</button>
+									<a href="trial_lesson.html">Book a <span>15 min free trial</span> lesson</a>
 									<div class="">
 										<p>Tutor's profile</p>
-										<div class="rate">
-											<img src="img/star/Star 4.svg" alt="" />
-											<img src="img/star/Star 4.svg" alt="" />
-											<img src="img/star/Star 4.svg" alt="" />
-											<img src="img/star/Star 4.svg" alt="" />
-											<img src="img/star/Star 4.svg" alt="" />
+										<div class="tutor_rate" id="1" data-rate="3">
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
+		
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
 										</div>
 										<p class="views">307 reviews</p>
 									</div>
@@ -116,10 +207,10 @@
 							<ul class="">
 								<li><a href="#pricing">Pricing</a></li>
 								<li><a href="#video">Video presentation</a></li>
-								<li><a href="#video">My specialities</a></li>
-								<li><a href="#presentation">Presentation</a></li>
+								<li><a href="#expert">My specialities</a></li>
+								<li><a href="#about_me">Presentation</a></li>
 								<li><a href="#apps">Apps</a></li>
-								<li><a href="#calendar">Tutor calendar</a></li>
+								<li><a href="#booking">Tutor calendar</a></li>
 								<li><a href="#payment">Payment method</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
@@ -128,7 +219,9 @@
 				</div>
 			</div>
 		</section>
-		<section class="pricing_students tutor_section">
+
+		<!-- PRICING -->
+		<section class="pricing_students tutor_section" id="pricing">
 			<div class="container">
 				<h3>Pricing</h3>
 				<div class="wrapper">
@@ -158,14 +251,14 @@
 						</div>
 					</div>
 					<div class="pricing_btns">
-						<button>Book lesson</button>
-						<button>Book a 15 min free trial lesson</button>
-						<button>Send message</button>
+						<a href="private_lesson.html">Book lesson</a>
+						<a href="trial_lesson.html">Book a 15 min free trial lesson</a>
+						<a href="">Send message</a>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section class="video_students tutor_section">
+		<section class="video_students tutor_section" id="video">
 			<div class="container">
 				<h3>Video</h3>
                 <div class="wrapper">
@@ -178,7 +271,7 @@
 		</section>
 
 		<!-- My specialities -->
-		<section class="tutor_section specialities_students">
+		<section class="tutor_section specialities_students" id="expert">
 			<div class="container">
 				<h3>My specialities</h3>
 				<div class="wrapper">
@@ -229,7 +322,7 @@
 		</section>
 
 			<!-- APPS -->
-			<section class="tutor_section apps_students">
+			<section class="tutor_section apps_students" id="apps">
 				<div class="container">
 					<h3>Apps</h3>
 					<div class="wrapper">
@@ -244,7 +337,8 @@
 					</div>
 				</div>
 			</section>
-			<section class="tutor_section booking">
+			<!-- BOOKING / CALENDAR -->
+			<section class="tutor_section booking" id="booking">
 				<div class="container">
 					<h3>Booking</h3>
 					<div class="wrapper">
@@ -543,7 +637,7 @@
 			</section>
 			<!-- payment method -->
 
-			<section class="payment tutor_section">
+			<section class="payment tutor_section" id="payment">
 				<div class="container">
 					<h3>Payment methods</h3>
 					<div class="wrapper">
@@ -563,7 +657,7 @@
 				
 			</section>
 
-			<section class="get_in_touch tutor_section">
+			<section class="get_in_touch tutor_section" id="contact">
 				<div class="container">
 					<h3>Get in touch with me</h3>
 				<div class="wrapper">
