--- a/trial_lesson.html
+++ b/trial_lesson.html
@@ -58,12 +58,103 @@
 								<div class="my_profile">
 									<div class="">
 										<p>Tutor's profile</p>
-										<div class="rate">
-											<img src="img/star/Star 4.svg" alt="" />
-											<img src="img/star/Star 4.svg" alt="" />
-											<img src="img/star/Star 4.svg" alt="" />
-											<img src="img/star/Star 4.svg" alt="" />
-											<img src="img/star/Star 4.svg" alt="" />
+										<div class="tutor_rate" id="1" data-rate="3">
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
+
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
+											<?xml version="1.0" encoding="utf-8"?>
+											<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+											<svg
+												version="1.1"
+												id="Layer_1"
+												xmlns="http://www.w3.org/2000/svg"
+												xmlns:xlink="http://www.w3.org/1999/xlink"
+												x="0px"
+												y="0px"
+												viewBox="0 0 12 11"
+												style="enable-background: new 0 0 12 11"
+												xml:space="preserve"
+											>
+												<style type="text/css"></style>
+												<path
+													class="st0"
+													d="M6.1,0l1.3,4.1h4.4L8.3,6.7l1.3,4.1L6.1,8.3l-3.5,2.6l1.3-4.1L0.4,4.1h4.4L6.1,0z"
+												/>
+											</svg>
 										</div>
 										<p class="views">307 reviews</p>
 									</div>
@@ -80,8 +171,8 @@
 									<p class="tutor_for">English tutor</p>
 
 									<div class="availability">
-										<p>Native <span>Language: English</span></p>
-										<p>Availability: <span>Skype, Zoom, Facetime</span></p>
+										<p>Native Language: English</p>
+										<p>Availability: Skype, Zoom, Facetime</p>
 									</div>
 								</div>
 
@@ -481,33 +572,10 @@
 						</div>
 
 						<div class="row">
-							<label for="pay_me">I’d like to pay with/by:</label>
-							<div class="select-box">
-								<select name="pay_me" id="pay_me">
-									<option value="">* Mandatory field</option>
-									<option value="WhatsApp">WhatsApp</option>
-									<option value="Zoom">Zoom</option>
-									<option value="Skype">Skype</option>
-									<option value="Viber">Viber</option>
-								</select>
-								<span></span>
-							</div>
-						</div>
-						<div class="row">
 							<p class="lead">
 								Your tutor prefers to receive the payment:
 								<span>before the lesson</span>
 							</p>
-						</div>
-						<div class="row">
-							<label for="select">The class is already paid for:</label>
-							<div class="select-box">
-								<select name="select" id="select">
-									<option value="yes">Yes</option>
-									<option value="no">No</option>
-								</select>
-								<span></span>
-							</div>
 						</div>
 
 						<div class="row">
