--- a/tutors.html
+++ b/tutors.html
@@ -43,7 +43,7 @@
 
 		<!-- FIND YOUR TUTOR  custom selectors-->
 
-		<section class="find_your_tutor">
+		<section class="find_your_tutor" id="tutor_search">
 			<div class="container">
 				<h3>Find your tutor</h3>
 				<div class="search_options">
@@ -190,35 +190,41 @@
 						<div class="custom-select">
 							<div class="select-box">
 								<div class="options-container">
-									<div class="option">
-										<input
-											type="radio"
-											class="radio"
-											id="option1"
-											name="category"
-										/>
-										<label for="option1">$1-$40</label>
-									</div>
-									<div class="option">
-										<input
-											type="radio"
-											class="radio"
-											id="option2"
-											name="category"
-										/>
-										<label for="option2">$40-$50</label>
-									</div>
-									<div class="option">
-										<input
-											type="radio"
-											class="radio"
-											id="option3"
-											name="category"
-										/>
-										<label for="option3">$50-$60</label>
+									<div class="option price">
+										<div class="middle">
+											<div class="price-range">
+												<p>
+													<span class="from">$0</span> -
+													<span class="to">$40</span>
+												</p>
+											</div>
+											<div class="multirange-slider">
+												<input
+													type="range"
+													id="input-left"
+													min="0"
+													max="40"
+													value="0"
+												/>
+												<input
+													type="range"
+													id="input-right"
+													min="0"
+													max="40"
+													value="40"
+												/>
+
+												<div class="slider">
+													<div class="track"></div>
+													<div class="range"></div>
+													<div class="thumb left"></div>
+													<div class="thumb right"></div>
+												</div>
+											</div>
+										</div>
 									</div>
 								</div>
-								<div class="selected">Select something</div>
+								<div class="selected">Price per hour</div>
 							</div>
 						</div>
 					</div>
