--- a/index.html
+++ b/index.html
@@ -1261,15 +1261,15 @@
 
 				<div class="owl-carousel owl-theme" id="testimonials">
 					<div class="item tutor_link">
-						<div class="item_left">
+						<!-- <div class="item_left">
 							<img src="img/students/students.png" alt="" />
-						</div>
+						</div> -->
 						<div class="item_right">
 							<div class="wrapper">
 								<div class="item-header">
 									<img src="img/students/students-round.png" alt="" />
 									<div class="item-header-text">
-										<h3>Josif Franjo</h3>
+										<h3>MArko Rupena</h3>
 										<p>Market Access Manager</p>
 										<p>Madrid, España</p>
 									</div>
@@ -1291,15 +1291,15 @@
 					</div>
 
 					<div class="item tutor_link">
-						<div class="item_left">
+						<!-- <div class="item_left">
 							<img src="img/students/students.png" alt="" />
-						</div>
+						</div> -->
 						<div class="item_right">
 							<div class="wrapper">
 								<div class="item-header">
-									<img src="img/students/students-round.png" alt="" />
+									<img src="img/map/map_person_1.png" alt="" />
 									<div class="item-header-text">
-										<h3>Josif Franjo</h3>
+										<h3>Stefan La Farge</h3>
 										<p>Market Access Manager</p>
 										<p>Madrid, España</p>
 									</div>
@@ -1319,8 +1319,92 @@
 							</div>
 						</div>
 					</div>
+					<div class="item tutor_link">
+						<!-- <div class="item_left">
+							<img src="img/students/students.png" alt="" />
+						</div> -->
+						<div class="item_right">
+							<div class="wrapper">
+								<div class="item-header">
+									<img src="img/students/students-round.png" alt="" />
+									<div class="item-header-text">
+										<h3>Luka Dimoni</h3>
+										<p>Market Access Manager</p>
+										<p>Madrid, España</p>
+									</div>
+								</div>
+								<div class="item-text">
+									<p>
+										Al principio pensaba que la formación a la distancia no
+										tenia la misma calidad a la presencial pero gracias a Kewoo
+										me ha dado cuenta que estaba errado. Son muchas ventajas de
+										las clases online: puedo estudiar desde dónde quiero: el
+										salon de milases online se adaptan
+										totalmente al horario que me convenga mas. Estoy disfrutando
+										mucho de mi experiencia en Kewoo.
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
 
 					<div class="item tutor_link">
+						<!-- <div class="item_left">
+							<img src="img/students/students.png" alt="" />
+						</div> -->
+						<div class="item_right">
+							<div class="wrapper">
+								<div class="item-header">
+									<img src="img/students/Students=round4.png" alt="" />
+									<div class="item-header-text">
+										<h3>Maria LaPlaza</h3>
+										<p>Market Access Manager</p>
+										<p>Madrid, España</p>
+									</div>
+								</div>
+								<div class="item-text">
+									<p>
+										Al principio pensaba que la formación a la distancia no
+										tenia la misma calidad a la presencial pero gracias a Kewoo
+										me ha dado cuenta que estaba errado. Son muchas ventajas de
+										las clases online: puedo estudiar desde dónde quiero: el
+										salon de mi casa, mi oficina o una cafeteria y lo mas
+										importa
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="item tutor_link">
+						<!-- <div class="item_left">
+							<img src="img/students/students.png" alt="" />
+						</div> -->
+						<div class="item_right">
+							<div class="wrapper">
+								<div class="item-header">
+									<img src="img/students/pexels-adhista-5937620 1.png" alt="" />
+									<div class="item-header-text">
+										<h3>Joseph Salamanca</h3>
+										<p>Market Access Manager</p>
+										<p>Madrid, España</p>
+									</div>
+								</div>
+								<div class="item-text">
+									<p>
+										Al principio pensaba que la formación a la distancia no
+										tenia la misma calidad a la presencial pero gracias a Kewoo
+										me ha dado cuenta que estaba errado. Son muchas ventajas de
+										las clases online: puedo estudiar desde dónde quiero: el
+										salon de mi casa, mi oficina o una cafeteria y lo mas
+										
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<!-- <div class="item tutor_link">
 						<div class="item_left">
 							<img src="img/students/students.png" alt="" />
 						</div>
@@ -1348,7 +1432,7 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 			</div>
 			<div class="row">
