--- a/tutors.html
+++ b/tutors.html
@@ -193,10 +193,10 @@
 									<div class="option price">
 										<div class="middle">
 											<div class="price-range">
-												<p>
+												<label>
 													<span class="from">$0</span> -
 													<span class="to">$40</span>
-												</p>
+												</label>
 											</div>
 											<div class="multirange-slider">
 												<input
