--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					/></a>
 					<div class="drop-down">
 						<ul class="nav-links">
-							<li><a href="">How it works</a></li>
+							<li><a href="index.html#how_it_works">How it works</a></li>
 							<li><a href="tutors.html">Tutors</a></li>
 							<li><a href="become_a_tutor.html">Become a tutor</a></li>
 							<li><a href="tutor_profile.html">Area tutors</a></li>
@@ -1143,7 +1143,7 @@
 			</div>
 		</section>
 		<!-- HOW IT WORKS -->
-		<section class="how">
+		<section class="how" id="how_it_works">
 			<div class="container">
 				<div class="icon">
 					<img src="img/icons/icon_gear.png" alt="" />
@@ -1261,9 +1261,9 @@
 
 				<div class="owl-carousel owl-theme" id="testimonials">
 					<div class="item tutor_link">
-						<!-- <div class="item_left">
+						<div class="item_left">
 							<img src="img/students/students.png" alt="" />
-						</div> -->
+						</div>
 						<div class="item_right">
 							<div class="wrapper">
 								<div class="item-header">
@@ -1291,9 +1291,9 @@
 					</div>
 
 					<div class="item tutor_link">
-						<!-- <div class="item_left">
+						<div class="item_left">
 							<img src="img/students/students.png" alt="" />
-						</div> -->
+						</div>
 						<div class="item_right">
 							<div class="wrapper">
 								<div class="item-header">
@@ -1320,9 +1320,9 @@
 						</div>
 					</div>
 					<div class="item tutor_link">
-						<!-- <div class="item_left">
+						<div class="item_left">
 							<img src="img/students/students.png" alt="" />
-						</div> -->
+						</div>
 						<div class="item_right">
 							<div class="wrapper">
 								<div class="item-header">
@@ -1339,9 +1339,9 @@
 										tenia la misma calidad a la presencial pero gracias a Kewoo
 										me ha dado cuenta que estaba errado. Son muchas ventajas de
 										las clases online: puedo estudiar desde dónde quiero: el
-										salon de milases online se adaptan
-										totalmente al horario que me convenga mas. Estoy disfrutando
-										mucho de mi experiencia en Kewoo.
+										salon de milases online se adaptan totalmente al horario que
+										me convenga mas. Estoy disfrutando mucho de mi experiencia
+										en Kewoo.
 									</p>
 								</div>
 							</div>
@@ -1349,9 +1349,9 @@
 					</div>
 
 					<div class="item tutor_link">
-						<!-- <div class="item_left">
+						<div class="item_left">
 							<img src="img/students/students.png" alt="" />
-						</div> -->
+						</div>
 						<div class="item_right">
 							<div class="wrapper">
 								<div class="item-header">
@@ -1377,9 +1377,9 @@
 					</div>
 
 					<div class="item tutor_link">
-						<!-- <div class="item_left">
+						<div class="item_left">
 							<img src="img/students/students.png" alt="" />
-						</div> -->
+						</div>
 						<div class="item_right">
 							<div class="wrapper">
 								<div class="item-header">
@@ -1397,7 +1397,6 @@
 										me ha dado cuenta que estaba errado. Son muchas ventajas de
 										las clases online: puedo estudiar desde dónde quiero: el
 										salon de mi casa, mi oficina o una cafeteria y lo mas
-										
 									</p>
 								</div>
 							</div>
