--- a/become_a_tutor.html
+++ b/become_a_tutor.html
@@ -20,7 +20,7 @@
 					/></a>
 					<div class="drop-down">
 						<ul class="nav-links">
-							<li><a href="">How it works</a></li>
+							<li><a href="index.html#how_it_works">How it works</a></li>
 							<li><a href="tutors.html">Tutors</a></li>
 							<li><a href="become_a_tutor.html">Become a tutor</a></li>
 							<li><a href="tutor_profile.html">Area tutors</a></li>
