--- a/tutor_profile.html
+++ b/tutor_profile.html
@@ -741,7 +741,7 @@
                 <div class="wrapper">
                     <p>Get featured and your profile will appear in our “Featured teachers” sections. You may rotate with other featured teachers.</p>
 
-                    <button><span>Get featured</span> for only <span> 99,99$</span> /mounth</button>
+                    <button><span>Get featured</span> for only <span> 99,99$</span> /month</button>
                     <p>Your Get Featured subscription is set to automatically renew on the same day every month. You can <a href="">cancel your subscriton</a> at any time.</p>
 
                     <p class="renewal">Your next renewal will be on <span>July 1,  2021.</span></p>
@@ -1112,9 +1112,9 @@ Soy Shon, profesor de Ingles con más de 10 años de experiencia. Lorem ipsum do
 				<div class="wrapper wrapper_contact" id="contact">
 					<p class="label">Contact me via</p>
 					<div class="inputs contact">
-						<input type="text" placeholder="PayPal, TranswerWise">
-						<input type="text" placeholder="PayPal, TranswerWise">
-						<input type="text" placeholder="PayPal, TranswerWise">
+						<input type="text" placeholder="Email, WhatsApp">
+						<input type="text" placeholder="email or phone number">
+						<input type="text" placeholder="Email, WhatsApp">
 						<input type="text" placeholder="email or phone number">					
 					</div>
 					<div class="spacer"></div>
