--- a/tutors_details.html
+++ b/tutors_details.html
@@ -359,7 +359,7 @@
 								<p>Legend</p>
 								<div >
 									<p><span></span> Booked</p>
-									<p><span></span> Unavailable</p>
+									<p><span></span> Free</p>
 								</div>
 							</div>
 						</div>
