--- a/private_lesson.html
+++ b/private_lesson.html
@@ -140,7 +140,7 @@
 							<p>Legend</p>
 							<div>
 								<p><span></span> Booked</p>
-								<p><span></span> Unavailable</p>
+								<p><span></span> Free</p>
 							</div>
 						</div>
 					</div>
