--- a/tutor_profile.html
+++ b/tutor_profile.html
@@ -824,6 +824,36 @@
 			</div>
 		</section>
 
+		<!-- LANGUAGES I CAN TEACH -->
+		<section class="tutor_section teach_langs">
+			<div class="container">
+				<h3>Languages I can teach</h3>
+				<div class="wrapper">
+					<p>Select languages that you can teach:</p>
+					<div class="lang_wrapper">
+						<div class="choose_lng">	
+						<input type="checkbox" name="engl" class="lang_input">
+							<label for="engl" class="select_lang">English</label>		
+						</div>
+
+						<div class="choose_lng">	
+							<input type="checkbox" name="engl" class="lang_input">
+								<label for="engl" class="select_lang">Italiano</label>		
+							</div>
+
+							<div class="choose_lng">	
+								<input type="checkbox" name="engl" class="lang_input">
+									<label for="engl" class="select_lang">Espanjol</label>		
+								</div>
+								<div class="choose_lng">	
+									<input type="checkbox" name="engl" class="lang_input">
+										<label for="engl" class="select_lang">Francais</label>		
+									</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
 				<!-- EXPERIANCE -->
 		<section class="tutor_section expert" id="expert">
 					<div class="container">
