Stranica: tutor_profile, sekcija: teach_lang, sekcija: my_classes

--- a/tutor_profile.html
+++ b/tutor_profile.html
@@ -829,7 +829,7 @@
 			<div class="container">
 				<h3>Languages I can teach</h3>
 				<div class="wrapper">
-					<p>Select languages that you can teach:</p>
+					<p>Select languages that you can teach</p>
 					<div class="lang_wrapper">
 						<div class="choose_lng">	
 						<input type="checkbox" name="engl" class="lang_input">
