--- a/become_a_tutor.html
+++ b/become_a_tutor.html
@@ -32,6 +32,10 @@
 							<li class="lang-esp"><a href="">SRB</a></li>
 							<li class="lang-esp"><a href="" class="lang-active">ENG</a></li>
 						</ul>
+						<a href="become_a_tutor.html" class="login"
+							><img src="img/icons/login_icon.svg" alt="" />
+							<p>Login</p></a
+						>
 					</div>
 					<div class="toggle-bar">
 						<span></span>
