--- a/private_lesson.html
+++ b/private_lesson.html
@@ -20,7 +20,7 @@
 					/></a>
 					<div class="drop-down">
 						<ul class="nav-links">
-							<li><a href="">How it works</a></li>
+							<li><a href="index.html#how_it_works">How it works</a></li>
 							<li><a href="tutors.html">Tutors</a></li>
 							<li><a href="become_a_tutor.html">Become a tutor</a></li>
 							<li><a href="tutor_profile.html">Area tutors</a></li>
@@ -32,6 +32,10 @@
 							<li class="lang-esp"><a href="">SRB</a></li>
 							<li class="lang-esp"><a href="" class="lang-active">ENG</a></li>
 						</ul>
+						<a href="become_a_tutor.html" class="login"
+							><img src="img/icons/login_icon.svg" alt="" />
+							<p>Login</p></a
+						>
 					</div>
 					<div class="toggle-bar">
 						<span></span>
