--- a/tutors.html
+++ b/tutors.html
@@ -32,9 +32,8 @@
 							<li class="lang-esp"><a href="" class="lang-active">ENG</a></li>
 						</ul>
 						<a href="become_a_tutor.html" class="login"
-							><img src="img/icons/login_icon.svg" alt="" />
-							<p>Login</p></a
-						>
+							><img src="img/icons/icon_tut.png" alt="" />
+						</a>
 					</div>
 					<div class="toggle-bar">
 						<span></span>
